syntax = "proto3";

package common.message;

message RpcRequest {
    string requestId = 1;           // 请求id
    string interfaceName = 2;       // 接口名称
    string methodName = 3;          // 方法名称
    repeated string params = 4;     // 参数
    repeated string paramsType = 5; // 参数类型
    int64 timestamp = 6;            // 时间戳
    string featureCode = 7;         // 特征码
    string traceId = 8;             // 链路追踪ID
    string spanId = 9;              // 链路追踪span ID
}

message RpcResponse {
    string requestId = 1;           // 对应请求id
    int32 code = 2;                 // 响应码
    string message = 3;             // 响应消息
    string dataType = 4;            // 响应数据类型
    string data = 5;                // 响应数据
    string traceId = 6;             // 链路追踪ID
    string spanId = 7;              // 链路追踪span ID
}